adds random quote route
