# openapi.json
@@ -17,14 +17,14 @@
   },
   "servers": [
     {
-      "url": "https://meleteapi.dev/api/v1",
+      "url": "https://melete.fly.dev/api",
       "description": ""
     }
   ],
   "tags": [
     {
       "name": "Quotes",
-      "description": "Query quotes by philosopher and era",
+      "description": "Query quotes by philosopher, era or randomly.",
       "externalDocs": {
         "description": "",
         "url": ""
@@ -34,8 +34,8 @@
   "paths": {
     "/quotes": {
       "get": {
-        "summary": "Returns an array of quotes based on passed query params",
-        "description": "\n* `author` and `era` query params can be set multiple times with different values in the same url (e.g., `?author=socrates&author=kant` or `?era=renaissance&era=mysticism`\n* queries are inclusive: `?author=aristotle&author=plato&era=contemporary+philosophy` will return quotes from Aristotle, Plato, and contemporary philosophy\n* `author` and `era` query params will match the closest author (\"plat\" will match \"plato\") or era (\"contemp\" will match \"contemporary philosophy\")\n* 100 results max are shown. If the `cursor` property on the response body is greater than -1, it can be passed as a query param (also named `cursor`) to get the next set of results\n* requesting just `/quotes` without any query params will return the first set of results from all quotes, which can then be paged through with `cursor`\n",
+        "summary": "Returns an array of quotes based on query params passed.",
+        "description": "\n* `author` and `era` query params can be set multiple times with different values in the same url (e.g., `?author=socrates&author=kant` or `?era=renaissance&era=mysticism`\n* queries are inclusive: `?author=aristotle&author=plato&era=contemporary%20philosophy` will return quotes from Aristotle, Plato, and contemporary philosophy\n* `author` and `era` query params will match the closest author (\"plat\" will match \"plato\") or era (\"contemp\" will match \"contemporary philosophy\")\n* 100 results max are shown. If the `cursor` property on the response body is greater than -1, it can be passed as a query param (also named `cursor`) to get the next set of results\n",
         "operationId": "getquotes",
         "tags": [
           "Quotes"
@@ -47,14 +47,6 @@
             "description": "query quotes from this author",
             "schema": {
               "type": "string"
-            },
-            "examples": {
-              "plato": {
-                "value": "plato"
-              },
-              "confucius": {
-                "value": "confucius"
-              }
             }
           },
           {
@@ -63,14 +55,6 @@
             "description": "query quotes from this era of philosophy",
             "schema": {
               "type": "string"
-            },
-            "examples": {
-              "contemporary philosophy": {
-                "value": "contemporary philosophy"
-              },
-              "islamic golden age": {
-                "value": "islamic golden age"
-              }
             }
           },
           {
@@ -87,15 +71,6 @@
         "responses": {
           "200": {
             "description": "success",
-            "headers": {
-              "Cache-Control": {
-                "description": "results are cached for one week",
-                "schema": {
-                  "type": "string",
-                  "default": "public, max-age=604800"
-                }
-              }
-            },
             "content": {
               "application/json": {
                 "schema": {
@@ -103,7 +78,8 @@
                   "properties": {
                     "cursor": {
                       "type": "number",
-                      "description": "used for querying next set of results; if value is -1, there are no more results to query"
+                      "description": "used for querying next set of results; if value is -1, there are no more results to query",
+                      "default": 1
                     },
                     "quotes": {
                       "type": "array",
@@ -139,6 +115,43 @@
             "headers": {}
           }
         }
+      }
+    },
+    "/quotes/random": {
+      "get": {
+        "summary": "Returns a random quote",
+        "operationId": "randomQuote",
+        "tags": [
+          "Quotes"
+        ],
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/Quote"
+                },
+                "examples": {
+                  "example": {
+                    "value": {
+                      "author": "seneca the younger",
+                      "text": "I may become a poor man; I shall then be one among many. I may be exiled; I shall then regard myself as born in the place to which I shall be sent. They may put me in chains. What then? Am I free from bonds now? Behold this clogging burden of a body, to which nature has fettered me! “I shall die,” you say; you mean to say “I shall cease to run the risk of sickness; I shall cease to run the risk of imprisonment; I shall cease to run the risk of death.”",
+                      "eras": [
+                        "hellenistic philosophy"
+                      ]
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "server error"
+          }
+        },
+        "description": "Will return a different quote each time it's used."
       }
     }
   },
